[package]
name = "aice"
version = "0.0.1"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[lib]
name = "aice"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
debug = 1
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
bincode = "=1.2.1"
bitflags = "1.0"
bstr = { version = "0.2.7", default-features = false, features = ["std"] }
bumpalo = { version = "3.9", features = ["collections"] }
byteorder = "1.1"
fern = "0.6"
fxhash = "0.2.1"
json = "0.12"
libc = "0.2"
log = "0.4"
once_cell = "1.13"
parking_lot = "0.12"
quick-error = "2.0"
scopeguard = "1.0"
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"
smallvec = "1.0"

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "sysinfoapi", "winuser", "wingdi"]

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "e962ef0ed9e04298e78d052737462cbbf2c50b5d"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "e962ef0ed9e04298e78d052737462cbbf2c50b5d"

[dependencies.bw_dat]
git = "https://github.com/neivv/aise"
rev = "3d1b9ea15af8ae0ccf80af54d8c1800d48b17474"
features = ["serde"]
