[package]
name = "aice"
version = "0.0.1"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[lib]
name = "aice"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
debug = 1
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
bincode = "=1.2.1"
bitflags = "1.0"
bstr = { version = "0.2.7", default-features = false, features = ["std"] }
bumpalo = { version = "3.9", features = ["collections"] }
byteorder = "1.1"
fern = "0.6"
fxhash = "0.2.1"
json = "0.12"
libc = "0.2"
log = "0.4"
once_cell = "1.13"
parking_lot = "0.12"
quick-error = "2.0"
scopeguard = "1.0"
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"
smallvec = "1.0"

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "sysinfoapi", "winuser", "wingdi"]

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "9a73bcccba8eb330371554065b5c559f1552bb3d"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "9a73bcccba8eb330371554065b5c559f1552bb3d"

[dependencies.bw_dat]
git = "https://github.com/neivv/aise"
rev = "257f4dc1dbff1719f80c96db81fe026e1144b680"
features = ["serde"]
