[package]
name = "aice"
version = "0.0.1"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[lib]
name = "aice"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
debug = 1
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
bincode = "=1.2.1"
bitflags = "1.0"
bstr = { version = "0.2.7", default-features = false, features = ["std"] }
bumpalo = { version = "3.9", features = ["collections"] }
byteorder = "1.1"
fern = "0.6"
fxhash = "0.2.1"
json = "0.12"
log = "0.4"
once_cell = "1.13"
parking_lot = "0.12"
quick-error = "2.0"
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"
smallvec = "1.0"

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "a3fcdd6abf077589e24f1226e1749a19cb8ef26a"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "a3fcdd6abf077589e24f1226e1749a19cb8ef26a"

[dependencies.bw_dat]
git = "https://github.com/neivv/aise"
rev = "2629020771d7d45ba524fb83fb6dfa7beb4edfea"
features = ["serde"]
